samples/_failures_safe/1761443473_c1ccaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28327035.c: In function ‘main’:
./samples/SAFE/__tmp_28327035.c:136:16: error: expected ‘;’ at end of input
  136 |     read_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_28327035.c:136:5: error: expected declaration or statement at end of input
  136 |     read_matrix
      |     ^~~~~~~~~~~
